fix calandar day color on ios

--- a/client/components/AddTransactionModal/AddTransactionForm/DateBlock/Calendar/CustomCalendar.module.scss
+++ b/client/components/AddTransactionModal/AddTransactionForm/DateBlock/Calendar/CustomCalendar.module.scss
@@ -2,4 +2,5 @@
   display: flex;
   justify-content: center;
   padding: 30px;
+  color: #000;
 }
